tests/error/misc_errors/pattern_funcall_mismatch1.err
Error: Type mismatch (at $FILE:12:21)
   | 
10 | def main(p: Point, x: int) -> None:
11 |     match p:
12 |         case Point(_,2.4):
   |                      ^^^ Expected pattern of type `int`, got `float`

Guppy compilation failed due to 1 previous error
